* Fix - Removing extra margin bottoms from heading blocks.

--- a/assets/css/scss/layout/_gutenberg-front.scss
+++ b/assets/css/scss/layout/_gutenberg-front.scss
@@ -14,6 +14,9 @@
 			padding-left: 0;
 			padding-right: 0;
 		}
+		h1, h2, h3, h4, h5, h6 {
+			margin-bottom: 0;
+		}
 	}
 	.navigation, #respond, .footer-meta {
 		padding: 2.4rem;
